--- a/contact/contact.css
+++ b/contact/contact.css
@@ -77,7 +77,7 @@ body{
     left: 93px;
     top: 182px;
 
-    font-family: Archivo Narrow;
+    font-family: 'Archivo Narrow';
     font-style: normal;
     font-weight: bold;
     font-size: 48px;
