--- a/about/about.css
+++ b/about/about.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 body{
-    background: #C4C4C4;
+    background: #151515;
 }
 
 #btnvoltar{
@@ -9,24 +9,28 @@ body{
     height: 48px;
     left: 21px;
     top: 657px;
+    transition: 0.3s;
+}
+#btnvoltar:hover{
+    opacity: 0.5;
 }
 
 #profile{    
     position: absolute;
     width: 449px;
-    height: 756px;
+    height: 656px;
     left: 129px;
-    top: 5px;
+    top: 55px;
 
-    background: #151515;
+    background: #e99636d7;
     border-radius: 37px;
 }
 #me{
     position: absolute;
-    width: 182px;
-    height: 182px;
-    left: 126px;
-    top: 25px;
+    width: 120px;
+    height: 120px;
+    left: 16px;
+    top: 12px;
 
     background: url(me.png);
     border: 10px solid #052838;
@@ -39,7 +43,7 @@ body{
     width: 410px;
     height: 150px;
     left: 38px;
-    top: 198px;
+    top: 108px;
 
     font-family: 'Archivo Narrow';
     font-style: normal;
@@ -47,7 +51,11 @@ body{
     font-size: 27px;
     line-height: 36px;
 
-    color: #FFFFFF;
+    color: #151515;
+}
+
+.bold{
+    font-weight: 700;
 }
 
 #curriculolink{
@@ -55,7 +63,7 @@ body{
     width: 260px;
     height: 31px;
     left: 85px;
-    top: 672px;
+    top: 572px;
     text-decoration: none;
     transition: 0.3s;
     border: 1px #C4C4C4;
@@ -66,10 +74,10 @@ body{
     font-size: 32px;
     line-height: 43px;
 
-    color: #FFFFFF;
+    color: #151515;
 }
 #curriculolink:hover{
-    color: #868686;
+    color: #fff;
 }
 
 #textescola{
@@ -77,7 +85,7 @@ body{
     width: 429px;
     height: 237px;
     left: 22px;
-    top: 388px;
+    top: 288px;
 
     font-family: 'Archivo Narrow';
     font-style: normal;
@@ -85,7 +93,7 @@ body{
     font-size: 27px;
     line-height: 36px;
 
-    color: #FFFFFF;
+    color: #151515;
 }
 
 #competencias{
@@ -101,7 +109,7 @@ body{
     font-size: 38px;
     line-height: 65px;
 
-    color: #000;
+    color: rgba(255, 255, 255, 0.603);
 
 }
 
@@ -112,7 +120,7 @@ body{
     left: 703px;
     top: 75px;
 
-    background: #E99536;
+    background: #e99636d7;
     border-radius: 63px 172px 48px 58px;
 }
 
@@ -125,7 +133,7 @@ body{
 
     font-family: 'Archivo Narrow';
     font-style: normal;
-    font-weight: bold;
+    font-weight: 600;
     font-size: 22px;
     line-height: 34px;
 
@@ -145,7 +153,7 @@ body{
     font-size: 38px;
     line-height: 65px;
     /* identical to box height */
-    color: #000;
+    color: rgba(255, 255, 255, 0.692);
 }
 #objbox{
     position: absolute;
@@ -154,7 +162,7 @@ body{
     left: 719px;
     top: 490px;
 
-    background: #151515;
+    background: #e99636d7;
     border-radius: 63px 172px 48px 58px;
 }
 #textobj{
@@ -164,9 +172,9 @@ body{
     left: 30px;
     top: 5px;
 
-    font-family: Archivo Narrow;
+    font-family: 'Archivo Narrow';
     font-style: normal;
-    font-weight: bold;
+    font-weight: 600;
     font-size: 32px;
-    color: #FFFFFF;
+    color: #151515;
 }
