ajustando css pag inicial

--- a/index/index.css
+++ b/index/index.css
@@ -103,7 +103,7 @@ footer{
     height: 48px;
     left: 215px;
     top: 280px;
-    padding: 250px 250px 250px;
+    padding: 250px 250px 189px 250px;
 
     font-family: 'Archivo Narrow';
     font-style: italic;
