--- a/sideNav.css
+++ b/sideNav.css
@@ -16,11 +16,10 @@
     font-style: italic;
 }
 
-#activeNavSide{
+.activeNavSide{
     left: 0px !important;
-    top: 20px;
     text-decoration: none;
-    color: #000;
+    color: #000 !important;
     background-color: #C4C4C4;
     display: flex;
 }
